--- a/public/assets/css/sisstyle.css
+++ b/public/assets/css/sisstyle.css
@@ -1,12 +1,11 @@
 @font-face {
-font-family: 'din';
-src: url('../fonts/din.eot');
-src: url('../fonts/din.eot?#iefix') format('embedded-opentype'), url('../fonts/din.woff') format('woff'), url('../fonts/din.ttf') format('truetype'), url('../fonts/din.svg#din') format('svg');
+font-family: 'Mardoto-Regular';
+src: url('../fonts/Mardoto-Regular.ttf');
 font-weight: normal;
 font-style: normal;
 }
 
-body {	color:#555;	font:normal 13px/22px Arial;	background:url(../image/bgmain.png) #eee;}
+body {	color:#555;	font:normal 13px/22px Arial;	background:url(../image/bgmain.png) #eee;font-family: 'Mardoto-Regular';}
 
 h1,h2,h3,h4,h5 { font-weight:normal; font-family: din;margin: 0;padding: 0;color: #000}
 h1{font-size: 60px; margin-bottom: 25px;color: #fff;}
