--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -60,7 +60,7 @@
 	background-size: cover;
 	background-position: center center;
 	background-color: #000;
-	opacity: 0.5; /*cange opacity for slider*/
+	opacity: 1;
 }
 
 /* Custom navigation arrows */
@@ -165,19 +165,19 @@
 
 
  .bg-img-1 {
-	background-image: url(../images/slider/1.jpg);
+	background-image: url(../image/1.jpg);
 }
  .bg-img-2 {
-	background-image: url(../images/slider/2.jpg);
+	background-image: url(../image/2.jpg);
 }
  .bg-img-3 {
-	background-image: url(../images/slider/3.jpg);
+	background-image: url(../image/3.jpeg);
 }
  .bg-img-4 {
-	background-image: url(../images/slider/4.jpg);
+	background-image: url(../image/4.jpg);
 }
  .bg-img-5 {
-	background-image: url(../images/slider/5.jpg);
+	background-image: url(../image/5.jpg);
 }
 
 /* Animations for content elements */
